--- a/Kalles/src/index.css
+++ b/Kalles/src/index.css
@@ -127,3 +127,35 @@ body {
     transform: scale(1);
   }
 }
+
+.bg-header {
+  position: relative;
+}
+
+.bg-header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+@keyframes splash {
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 0.5;
+  }
+
+  100% {
+    width: 500px;
+    height: 500px;
+    opacity: 0;
+  }
+}
+
+.animate-splash {
+  animation: splash 0.6s ease-out forwards;
+}
