--- a/Kalles/src/index.css
+++ b/Kalles/src/index.css
@@ -222,3 +222,17 @@ body {
 .tooltip:hover .tooltip-text {
   visibility: visible;
 }
+
+.progress-bar {
+  position: relative;
+}
+
+.progress-bar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #fdbc00;
+}
