--- a/Kalles/src/index.css
+++ b/Kalles/src/index.css
@@ -236,3 +236,29 @@ body {
   height: 100%;
   background-color: #fdbc00;
 }
+
+.shop-btn {
+  position: relative;
+  overflow: hidden;
+
+}
+
+.shop-btn::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 100%;
+  left: 0;
+  border-radius: 10%;
+  background-color: #19a3b9;
+  transition: 0.3s;
+}
+.shop-btn span {
+  position: relative;
+  z-index: 2;
+}
+
+.shop-btn:hover::before {
+  top: 0;
+}
